Update: main - Diff report completed

--- a/beta/index.html
+++ b/beta/index.html
@@ -28,6 +28,8 @@
 
                         <li><a href='diff_remove_diagn.html'>Unified diff core:dev vs beta:origin/remove_diagn</a></li>
 
+                        <li><a href='diff_renovate/asottile-pyupgrade-3.x.html'>Unified diff core:dev vs beta:origin/renovate/asottile-pyupgrade-3.x</a></li>
+
                 </ul>
                 <p>Various PR branch differences against Core (dev/upstreaming)</p>
                 <ul>
