--- a/beta/index.html
+++ b/beta/index.html
@@ -28,7 +28,7 @@
 
                         <li><a href='diff_remove_diagn.html'>Unified diff core:dev vs beta:origin/remove_diagn</a></li>
 
-                        <li><a href='diff_renovate/asottile-pyupgrade-3.x.html'>Unified diff core:dev vs beta:origin/renovate/asottile-pyupgrade-3.x</a></li>
+                        <li><a href='diff_zone_profile.html'>Unified diff core:dev vs beta:origin/zone_profile</a></li>
 
                 </ul>
                 <p>Various PR branch differences against Core (dev/upstreaming)</p>
