--- a/beta/index.html
+++ b/beta/index.html
@@ -14,8 +14,6 @@
 
                         <li><a href='diff_add_weather.html'>Unified diff core:dev vs beta:origin/add_weather</a></li>
 
-                        <li><a href='diff_emma-in-snapshot.html'>Unified diff core:dev vs beta:origin/emma-in-snapshot</a></li>
-
                         <li><a href='diff_improve-delete.html'>Unified diff core:dev vs beta:origin/improve-delete</a></li>
 
                         <li><a href='diff_main.html'>Unified diff core:dev vs beta:origin/main</a></li>
@@ -27,6 +25,8 @@
                         <li><a href='diff_pre_0_34_11.html'>Unified diff core:dev vs beta:origin/pre_0_34_11</a></li>
 
                         <li><a href='diff_py314.html'>Unified diff core:dev vs beta:origin/py314</a></li>
+
+                        <li><a href='diff_renovate/cdce8p-python-typing-update-0.x.html'>Unified diff core:dev vs beta:origin/renovate/cdce8p-python-typing-update-0.x</a></li>
 
                 </ul>
                 <p>Various PR branch differences against Core (dev/upstreaming)</p>
