--- a/beta/index.html
+++ b/beta/index.html
@@ -26,6 +26,10 @@
 
                         <li><a href='diff_py314.html'>Unified diff core:dev vs beta:origin/py314</a></li>
 
+                        <li><a href='diff_renovate/igorshubovych-markdownlint-cli-0.x.html'>Unified diff core:dev vs beta:origin/renovate/igorshubovych-markdownlint-cli-0.x</a></li>
+
+                        <li><a href='diff_renovate/pycqa-bandit-1.x.html'>Unified diff core:dev vs beta:origin/renovate/pycqa-bandit-1.x</a></li>
+
                 </ul>
                 <p>Various PR branch differences against Core (dev/upstreaming)</p>
                 <ul>
