Update: main - Diff report completed

--- a/beta/index.html
+++ b/beta/index.html
@@ -14,6 +14,8 @@
 
                         <li><a href='diff_add_weather.html'>Unified diff core:dev vs beta:origin/add_weather</a></li>
 
+                        <li><a href='diff_fix_config_urls.html'>Unified diff core:dev vs beta:origin/fix_config_urls</a></li>
+
                         <li><a href='diff_improve-delete.html'>Unified diff core:dev vs beta:origin/improve-delete</a></li>
 
                         <li><a href='diff_main.html'>Unified diff core:dev vs beta:origin/main</a></li>
