Update: main - Diff report completed

--- a/beta/index.html
+++ b/beta/index.html
@@ -14,8 +14,6 @@
 
                         <li><a href='diff_add_weather.html'>Unified diff core:dev vs beta:origin/add_weather</a></li>
 
-                        <li><a href='diff_fix_config_urls.html'>Unified diff core:dev vs beta:origin/fix_config_urls</a></li>
-
                         <li><a href='diff_improve-delete.html'>Unified diff core:dev vs beta:origin/improve-delete</a></li>
 
                         <li><a href='diff_main.html'>Unified diff core:dev vs beta:origin/main</a></li>
@@ -25,6 +23,8 @@
                         <li><a href='diff_new_sensor.html'>Unified diff core:dev vs beta:origin/new_sensor</a></li>
 
                         <li><a href='diff_pre_0_34_11.html'>Unified diff core:dev vs beta:origin/pre_0_34_11</a></li>
+
+                        <li><a href='diff_pw-1_11_0.html'>Unified diff core:dev vs beta:origin/pw-1_11_0</a></li>
 
                         <li><a href='diff_py314.html'>Unified diff core:dev vs beta:origin/py314</a></li>
 
