Update: main - Diff report completed

--- a/beta/index.html
+++ b/beta/index.html
@@ -16,6 +16,8 @@
 
                         <li><a href='diff_disable-switch-groups.html'>Unified diff core:dev vs beta:origin/disable-switch-groups</a></li>
 
+                        <li><a href='diff_disable-switch-groups-2.html'>Unified diff core:dev vs beta:origin/disable-switch-groups-2</a></li>
+
                         <li><a href='diff_improve-delete.html'>Unified diff core:dev vs beta:origin/improve-delete</a></li>
 
                         <li><a href='diff_main.html'>Unified diff core:dev vs beta:origin/main</a></li>
