Update: main - Diff report completed

--- a/beta/diff_coord-restore-state.html
+++ b/beta/diff_coord-restore-state.html
@@ -26155,7 +26155,7 @@
     <td class="d2h-del d2h-change">
         <div class="d2h-code-side-line">
             <span class="d2h-code-line-prefix">-</span>
-            <span class="d2h-code-line-ctn">        <del>#</del> <del>new_devices</del> <del>contains all devices present in data at init (</del>self._current_devices <del>is</del> <del>empty</del>)</span>
+            <span class="d2h-code-line-ctn">        <del>#</del> <del>&#x27;new_devices&#x27;</del> <del>contains all devices present in &#x27;data&#x27; at init (&#x27;</del>self._current_devices<del>&#x27;</del> <del>is</del> <del>empty</del>)</span>
         </div>
     </td>
 </tr><tr>
@@ -26165,7 +26165,7 @@
     <td class="d2h-del d2h-change">
         <div class="d2h-code-side-line">
             <span class="d2h-code-line-prefix">-</span>
-            <span class="d2h-code-line-ctn">        <del>#</del> <del>for</del> <del>the proper initialization of all the present platform entities.</del></span>
+            <span class="d2h-code-line-ctn">        <del>#</del> <del>this</del> <del>is required for the proper initialization of all the present platform entities.</del></span>
         </div>
     </td>
 </tr><tr>
