--- a/beta/index.html
+++ b/beta/index.html
@@ -26,6 +26,8 @@
 
                         <li><a href='diff_py314.html'>Unified diff core:dev vs beta:origin/py314</a></li>
 
+                        <li><a href='diff_test-alt.html'>Unified diff core:dev vs beta:origin/test-alt</a></li>
+
                 </ul>
                 <p>Various PR branch differences against Core (dev/upstreaming)</p>
                 <ul>
