Update: main - Diff report completed

--- a/beta/index.html
+++ b/beta/index.html
@@ -16,6 +16,8 @@
 
                         <li><a href='diff_improve-delete.html'>Unified diff core:dev vs beta:origin/improve-delete</a></li>
 
+                        <li><a href='diff_jsonsort.html'>Unified diff core:dev vs beta:origin/jsonsort</a></li>
+
                         <li><a href='diff_main.html'>Unified diff core:dev vs beta:origin/main</a></li>
 
                         <li><a href='diff_migrate_max_dhw_temp.html'>Unified diff core:dev vs beta:origin/migrate_max_dhw_temp</a></li>
