Update: main - Diff report completed

--- a/beta/index.html
+++ b/beta/index.html
@@ -26,9 +26,13 @@
 
                         <li><a href='diff_pre_0_34_11.html'>Unified diff core:dev vs beta:origin/pre_0_34_11</a></li>
 
+                        <li><a href='diff_prek.html'>Unified diff core:dev vs beta:origin/prek</a></li>
+
                         <li><a href='diff_py314.html'>Unified diff core:dev vs beta:origin/py314</a></li>
 
                         <li><a href='diff_renovate/biomejs-pre-commit-2.x.html'>Unified diff core:dev vs beta:origin/renovate/biomejs-pre-commit-2.x</a></li>
+
+                        <li><a href='diff_renovate/plugwise-gh-actions-2.x.html'>Unified diff core:dev vs beta:origin/renovate/plugwise-gh-actions-2.x</a></li>
 
                 </ul>
                 <p>Various PR branch differences against Core (dev/upstreaming)</p>
