--- a/beta/index.html
+++ b/beta/index.html
@@ -32,7 +32,11 @@
 
                         <li><a href='diff_renovate/adrienverge-yamllint-1.x.html'>Unified diff core:dev vs beta:origin/renovate/adrienverge-yamllint-1.x</a></li>
 
+                        <li><a href='diff_renovate/astral-sh-ruff-pre-commit-0.x.html'>Unified diff core:dev vs beta:origin/renovate/astral-sh-ruff-pre-commit-0.x</a></li>
+
                         <li><a href='diff_renovate/biomejs-pre-commit-2.x.html'>Unified diff core:dev vs beta:origin/renovate/biomejs-pre-commit-2.x</a></li>
+
+                        <li><a href='diff_renovate/rbubley-mirrors-prettier-3.x.html'>Unified diff core:dev vs beta:origin/renovate/rbubley-mirrors-prettier-3.x</a></li>
 
                 </ul>
                 <p>Various PR branch differences against Core (dev/upstreaming)</p>
