Update: main - Diff report completed

--- a/beta/index.html
+++ b/beta/index.html
@@ -28,6 +28,10 @@
 
                         <li><a href='diff_py314.html'>Unified diff core:dev vs beta:origin/py314</a></li>
 
+                        <li><a href='diff_renovate/actions-checkout-6.x.html'>Unified diff core:dev vs beta:origin/renovate/actions-checkout-6.x</a></li>
+
+                        <li><a href='diff_renovate/astral-sh-ruff-pre-commit-0.x.html'>Unified diff core:dev vs beta:origin/renovate/astral-sh-ruff-pre-commit-0.x</a></li>
+
                 </ul>
                 <p>Various PR branch differences against Core (dev/upstreaming)</p>
                 <ul>
