--- a/beta/index.html
+++ b/beta/index.html
@@ -14,6 +14,8 @@
 
                         <li><a href='diff_add_weather.html'>Unified diff core:dev vs beta:origin/add_weather</a></li>
 
+                        <li><a href='diff_core-163452.html'>Unified diff core:dev vs beta:origin/core-163452</a></li>
+
                         <li><a href='diff_improve-delete.html'>Unified diff core:dev vs beta:origin/improve-delete</a></li>
 
                         <li><a href='diff_jsonsort.html'>Unified diff core:dev vs beta:origin/jsonsort</a></li>
@@ -27,10 +29,6 @@
                         <li><a href='diff_pre_0_34_11.html'>Unified diff core:dev vs beta:origin/pre_0_34_11</a></li>
 
                         <li><a href='diff_py314.html'>Unified diff core:dev vs beta:origin/py314</a></li>
-
-                        <li><a href='diff_renovate/astral-sh-ruff-pre-commit-0.x.html'>Unified diff core:dev vs beta:origin/renovate/astral-sh-ruff-pre-commit-0.x</a></li>
-
-                        <li><a href='diff_renovate/biomejs-pre-commit-2.x.html'>Unified diff core:dev vs beta:origin/renovate/biomejs-pre-commit-2.x</a></li>
 
                 </ul>
                 <p>Various PR branch differences against Core (dev/upstreaming)</p>
