--- a/beta/index.html
+++ b/beta/index.html
@@ -30,6 +30,8 @@
 
                         <li><a href='diff_py314.html'>Unified diff core:dev vs beta:origin/py314</a></li>
 
+                        <li><a href='diff_remove-homekit.html'>Unified diff core:dev vs beta:origin/remove-homekit</a></li>
+
                 </ul>
                 <p>Various PR branch differences against Core (dev/upstreaming)</p>
                 <ul>
